--- a/extension/package.json
+++ b/extension/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.5"
+    "react-router": "^7.9.5",
+    "sass": "^1.93.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
