--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       ENCRYPTION_KEY: ${ENCRYPTION_KEY:-change-this-encryption-key-in-production-use-at-least-32-characters}
     volumes:
       - backend_data:/app/data
-    ports:
-      - "3000:3000"
+    #ports:
+    #  - "3000:3000"
     restart: always
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/"]
@@ -20,6 +20,12 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+      - shared-services
+
+networks:
+  shared-services:
+    external: true
 
 volumes:
   backend_data:
