--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,14 +8,9 @@ SESSION_SECRET=your-secret-key-change-in-production-use-at-least-32-characters
 # Encryption Configuration (for password manager entries)
 ENCRYPTION_KEY=your-encryption-key-change-in-production-use-at-least-32-characters
 
-# CORS Configuration
-# Comma-separated list of allowed origins (frontend URLs)
-# Example for production: https://app.example.com,https://www.example.com
-# Example for development: http://localhost:3000,http://localhost:5173
-ALLOWED_ORIGINS=http://localhost:3000
-
 # Cookie Configuration (Optional)
 # Set the domain for cookies - use leading dot for subdomains
 # Example: .example.com (works for app.example.com, api.example.com, etc.)
-# Leave empty for localhost or same-domain cookies
+# Leave EMPTY for localhost or if frontend and backend are on same domain
+# For debugging: Leave this empty initially
 COOKIE_DOMAIN=
